--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "dec"
-version = "2.3.1"
+version = "2.4.0"
 edition = "2024"
 
 [dependencies]
-rpassword = "7.0"
-ring = "0.17"
-aes = "0.8"
-ctr = "0.9"
-argon2 = "0.5"
-hmac = "0.12"
-sha2 = "0.10"
-hkdf = "0.12"
-rayon = "1.8"
+rpassword = "7.4.0"
+ring = "0.17.14"
+aes = "0.8.4"
+ctr = "0.9.2"
+argon2 = "0.5.3"
+hmac = "0.12.1"
+sha2 = "0.10.9"
+hkdf = "0.12.4"
+rayon = "1.11.0"
+tempfile = "3.24.0"
