fix: 增加了版权声明

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "dec"
-version = "2.4.0"
+version = "2.4.1"
 edition = "2024"
+license = "MIT"
 
 [dependencies]
 rpassword = "7.4.0"
